background/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-background-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32002
  selector:
    app: be-background-deployment
