background/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: be-test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: be-service
            port:
              number: 80
